src/test/ui/issues/issue-5062.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-5062.rs:1:29
   |
LL | fn main() { format!("{:?}", None); }
   |                             ^^^^ cannot infer type for `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
