src/test/ui/issues/issue-5062.rs
fn main() { format!("{:?}", None); }
    //~^ ERROR type annotations needed [E0282]
